# tasks-watcher

./: .pylintrc  Makefile  pyproject.toml  readme.md
.github/workflows/: workflows.yaml
tasks_watcher/: config.py  models.py  time_diff.py
tasks_watcher/cli/: aligned.py  cateogries.py  common.py  database.py  events.py  main.py  projects.py  sync.py  tasks.py
tasks_watcher/cli/view/: aligned.py  event.py  task.py  timeline.py
tasks_watcher/database/: category_repository.py  event_repository.py  migrations.py  project_repository.py  repository.py  task_repository.py
tests/: test_tasks_watcher.py
