[tool.poetry]
name = "tasks-watcher"
version = "0.1.0"
description = ""
authors = ["milan.suk <milan.suk@kiwi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
typer = "^0.3.2"
PyDrive = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.8.0"
pylint = "^2.7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
t = "tasks_watcher.cli.main:entrypoint"
